generator client {
  provider = "prisma-client"
  output   = "../../src/generated/client2"
}

datasource db {
  provider = "postgresql"
  schemas  = ["flexiadsdb"]
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../dbml/schema2.dbml"
}

generator prismabox { 
  provider                       = "prismabox"
  typeboxImportDependencyName    = "elysia"
  typeboxImportVariableName      = "t"
  inputModel                     = true
  output                         = ".../../src/generated/prismabox"
} 

//----------------------------------------------------
// USER / MEMBER / BUSINESS (เหมือนเดิม)
//----------------------------------------------------

model User {
  id        Int           @id @default(autoincrement())
  email     String        @unique
  password  String
  firstName String
  lastName  String
  avatar    String?
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt
  phone     String        @unique
  username  String?       @unique
  Business  BusinessAcc[] @relation(name: "BusinessOwner")
  member    Member[]

  @@schema("flexiadsdb")
}

model Member {
  uniqueId   String       @id @default(uuid())
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
  userId     Int
  user       User         @relation(fields: [userId], references: [id])
  businessId Int?
  business   BusinessAcc? @relation(fields: [businessId], references: [id], name: "BusinessMembers")
  // relations
  products   Product[]
  campaigns  BoostCampaign[]

  @@schema("flexiadsdb")
}

model BusinessAcc {
  id           Int       @id @default(autoincrement())
  createdAt    DateTime? @default(now())
  updatedAt    DateTime? @updatedAt
  name         String
  businessType Category
  userId       Int
  user         User      @relation(fields: [userId], references: [id], name: "BusinessOwner")
  AllMember    Member[]  @relation(name: "BusinessMembers")
  products     Product[]
  campaigns    BoostCampaign[]

  @@schema("flexiadsdb")
}

//----------------------------------------------------
// PRODUCT SYSTEM (Flexible / Future-proof)
//----------------------------------------------------

model CategoryDef {
  id          Int      @id @default(autoincrement())
  name        String   @unique      // e.g. "Office", "Coach", "Bank"
  description String?
  products    Product[]

  @@schema("flexiadsdb")
}

model Product {
  id           Int           @id @default(autoincrement())
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  title        String
  description  String
  image        String?
  callToAction String?
  businessId   Int
  business     BusinessAcc   @relation(fields: [businessId], references: [id])
  categoryId   Int
  category     CategoryDef   @relation(fields: [categoryId], references: [id])
  authorId     String
  author       Member        @relation(fields: [authorId], references: [uniqueId])
  deleted       Boolean       @default(false)

  // relation
  details      ProductDetail[]
  campaigns    BoostCampaign[]
  adEvents     AdEvent[]

  @@schema("flexiadsdb")
}

model ProductDetail {
  id         Int      @id @default(autoincrement())
  key        String   // e.g. "location", "interestRate", "benefit1"
  value      String   // JSON string allowed
  productId  Int
  product    Product  @relation(fields: [productId], references: [id])

  @@schema("flexiadsdb")
}

//----------------------------------------------------
// BOOST ADS SYSTEM
//----------------------------------------------------

model BoostCampaign {
  id           Int          @id @default(autoincrement())
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
  name         String?
  status       CampaignStatus @default(ACTIVE)

  // Budget & Duration
  budget       Float
  dailyCap     Float?
  startDate    DateTime
  endDate      DateTime

  // Bidding
  bidStrategy  BidStrategy  @default(AUTO)
  maxBid       Float?        // for manual bids

  // Relations
  businessId   Int
  business     BusinessAcc   @relation(fields: [businessId], references: [id])

  productId    Int
  product      Product       @relation(fields: [productId], references: [id])

  ownerId      String
  owner        Member        @relation(fields: [ownerId], references: [uniqueId])

  results      BoostResult[]
  bidLogs      BoostBidLog[]
  spendLogs    BoostSpendLog[]
  adEvents     AdEvent[]

  @@schema("flexiadsdb")
}

model BoostResult {
  id          Int        @id @default(autoincrement())
  date        DateTime
  impressions Int        @default(0)
  clicks      Int        @default(0)
  views       Int        @default(0)
  ctr         Float      @default(0)
  costSpent   Float      @default(0)
  campaignId  Int
  campaign    BoostCampaign @relation(fields: [campaignId], references: [id])

  @@schema("flexiadsdb")
}

model BoostBidLog {
  id          Int        @id @default(autoincrement())
  timestamp   DateTime   @default(now())
  bidValue    Float
  reason      String?    // e.g. "auto adjustment", "manual update"
  campaignId  Int
  campaign    BoostCampaign @relation(fields: [campaignId], references: [id])

  @@schema("flexiadsdb")
}

model BoostSpendLog {
  id          Int        @id @default(autoincrement())
  timestamp   DateTime   @default(now())
  spend       Float
  campaignId  Int
  campaign    BoostCampaign @relation(fields: [campaignId], references: [id])

  @@schema("flexiadsdb")
}


model AdEvent {
  id          Int        @id @default(autoincrement())
  createdAt   DateTime   @default(now())

  // Event Info
  type        EventType
  productId   Int
  campaignId  Int?
  
  viewerId     String

  // Relations
  product     Product      @relation(fields: [productId], references: [id])
  campaign    BoostCampaign? @relation(fields: [campaignId], references: [id])

  @@schema("flexiadsdb")
}

//----------------------------------------------------
// ENUMS
//----------------------------------------------------

enum Category {
  Office
  Coach
  Bank
  Agency
  Account
  Orm

  @@schema("flexiadsdb")
}

enum BidStrategy {
  AUTO
  MANUAL

  @@schema("flexiadsdb")
}

enum CampaignStatus {
  ACTIVE
  PAUSED
  COMPLETED
  CANCELLED

  @@schema("flexiadsdb")
}
enum EventType {
  IMPRESSION
  CLICK
  VIEW

  @@schema("flexiadsdb")
}
