//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  avatar String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  phone String [unique, not null]
  username String [unique]
  Business BusinessAcc [not null]
  member Member [not null]
}

Table Member {
  uniqueId String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId Int [not null]
  user User [not null]
  businessId Int
  business BusinessAcc
  products Product [not null]
  campaigns BoostCampaign [not null]
}

Table BusinessAcc {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  name String [not null]
  businessType Category [not null]
  userId Int [not null]
  user User [not null]
  AllMember Member [not null]
  products Product [not null]
  campaigns BoostCampaign [not null]
}

Table CategoryDef {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  products Product [not null]
}

Table Product {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String [not null]
  image String
  callToAction String
  businessId Int [not null]
  business BusinessAcc [not null]
  categoryId Int [not null]
  category CategoryDef [not null]
  authorId String [not null]
  author Member [not null]
  deleted Boolean [not null, default: false]
  details ProductDetail [not null]
  campaigns BoostCampaign [not null]
  adEvents AdEvent [not null]
}

Table ProductDetail {
  id Int [pk, increment]
  key String [not null]
  value String [not null]
  productId Int [not null]
  product Product [not null]
}

Table BoostCampaign {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String
  status CampaignStatus [not null, default: 'ACTIVE']
  budget Float [not null]
  dailyCap Float
  startDate DateTime [not null]
  endDate DateTime [not null]
  bidStrategy BidStrategy [not null, default: 'AUTO']
  maxBid Float
  businessId Int [not null]
  business BusinessAcc [not null]
  productId Int [not null]
  product Product [not null]
  ownerId String [not null]
  owner Member [not null]
  results BoostResult [not null]
  bidLogs BoostBidLog [not null]
  spendLogs BoostSpendLog [not null]
  adEvents AdEvent [not null]
}

Table BoostResult {
  id Int [pk, increment]
  date DateTime [not null]
  impressions Int [not null, default: 0]
  clicks Int [not null, default: 0]
  views Int [not null, default: 0]
  ctr Float [not null, default: 0]
  costSpent Float [not null, default: 0]
  campaignId Int [not null]
  campaign BoostCampaign [not null]
}

Table BoostBidLog {
  id Int [pk, increment]
  timestamp DateTime [default: `now()`, not null]
  bidValue Float [not null]
  reason String
  campaignId Int [not null]
  campaign BoostCampaign [not null]
}

Table BoostSpendLog {
  id Int [pk, increment]
  timestamp DateTime [default: `now()`, not null]
  spend Float [not null]
  campaignId Int [not null]
  campaign BoostCampaign [not null]
}

Table AdEvent {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  type EventType [not null]
  productId Int [not null]
  campaignId Int
  viewerId String [not null]
  product Product [not null]
  campaign BoostCampaign
}

Enum Category {
  Office
  Coach
  Bank
  Agency
  Account
  Orm
}

Enum BidStrategy {
  AUTO
  MANUAL
}

Enum CampaignStatus {
  ACTIVE
  PAUSED
  COMPLETED
  CANCELLED
}

Enum EventType {
  IMPRESSION
  CLICK
  VIEW
}

Ref: Member.userId > User.id

Ref: Member.businessId > BusinessAcc.id

Ref: BusinessAcc.userId > User.id

Ref: Product.businessId > BusinessAcc.id

Ref: Product.categoryId > CategoryDef.id

Ref: Product.authorId > Member.uniqueId

Ref: ProductDetail.productId > Product.id

Ref: BoostCampaign.businessId > BusinessAcc.id

Ref: BoostCampaign.productId > Product.id

Ref: BoostCampaign.ownerId > Member.uniqueId

Ref: BoostResult.campaignId > BoostCampaign.id

Ref: BoostBidLog.campaignId > BoostCampaign.id

Ref: BoostSpendLog.campaignId > BoostCampaign.id

Ref: AdEvent.productId > Product.id

Ref: AdEvent.campaignId > BoostCampaign.id